# chrome_console_python

./: .gitignore  LICENSE  MANIFEST.in  QUICK_START.md  README.md  VIRTUAL_ENV_SETUP.md  pyproject.toml  requirements.txt  setup.py  test_in_venv.sh  test_package.py
chrome_console_capture/: __init__.py  browser.py  capture.py  exceptions.py
examples/: basic_example.py  flask_integration.py
